Remove vertical leader line for now since it breaks links

--- a/dos33.html
+++ b/dos33.html
@@ -629,6 +629,9 @@ console.log( "TODO: CSS Monochrome" );
 <button type='button' id='syntax_color' disabled onclick='onSyntaxChangeColor();'>Color     </button>
 <button type='button' id='syntax_mono'           onclick='onSyntaxChangeMono ();'>Monochrome</button>
 </div>
+<!-- This unfortunately breaks the ability to click on links
+that overflow into this region -->
+<!--
 <div class='commentmargin'>
 <pre>                                                                            |
 |
@@ -698,6 +701,7 @@ console.log( "TODO: CSS Monochrome" );
 |
 <pre>
 </div>
+-->
 <h1>Apple DOS 3.3C Source Code (Unified HTML and Annotated Version)</h1>
 <h1>0.0 Table of Contents</h1>
     <ul class="toc">
