Update internal cheat sheet notes

--- a/dos33.html
+++ b/dos33.html
@@ -3,9 +3,12 @@
 <span class="todo">TODO</span> add fixed header on scroll for filenames
 <a class="page" href="#page1"></a>
 === Page <a class="page" name="page1"></a> ===
+<span class='code'></span>
+<a class='magic' name='#_1C28'>magic number</a>
 <a class='mem' name='_1D7D'>wastes</a>
 <a class="f" name="CORRECTVOL" id="CORRECTVOL" >CORRECTVOL  </a>
 <a class='f' name='_8'       >12_         </a>
+<!--                           -->
                         25          37              53                              85  89  93
 Local Line Number
 ####:## ## ##       ### LABEL       NMEMONIC        COMMENT                         ; Annotation
