Update Project completeion headers

--- a/dos33.html
+++ b/dos33.html
@@ -18,9 +18,10 @@ Global Line Number
 Pages left:
 
         1st pass = Text
-          2nd pass = hyperlinks
-            3rd pass = address & opcodes
-              4th pass = Annotation
+          2nd pass = Hyperlinks
+            3rd pass = address & Opcodes
+              4th pass = Commentary / Annotation
+        T H O C
       0 n/a
       1 - - - -
       2 - - - -
@@ -176,6 +177,7 @@ Pages left:
     152 - - - -
     153 - - - -
     154 - - - -
+        T H O C
         1st 3rd
           2nd 4th
 
