Removed Hyperlinking for clarity, clarified what linking means

--- a/dos33.html
+++ b/dos33.html
@@ -743,8 +743,8 @@ Numerous improvements have been made over the original DOS 3.3C assembly source 
 <ul>
   <li>Syntax Highlighting</li>
   <ul>
-      <li>Hyperlinking all functions (blue),                          </li>
-      <li>Hyperlinking all variables (green),                         </li>
+      <li>Linking all functions (blue) -- clicking on them will scroll to their declaration, </li>
+      <li>Linking all variables (green) -- clicking on them will scroll to their declaration,</li>
       <li>All numbers (orange),                                       </li>
       <li>Inactive macro sections (gray)                              </li>
       <li>Options for color or monochrome syntax highlighting         </li>
