Snarky Annotation Column

--- a/dos33.html
+++ b/dos33.html
@@ -753,9 +753,8 @@ Numerous improvements have been made over the original DOS 3.3C assembly source 
   <li>Memory address and instruction opcodes,                         </li>
   <li>Cleaned up sloppy vertical alignment (such as (#) clock cycles),</li>
   <li>Unindented macro sections,                                      </li>
-  <li>Annotation commentary column,                                   </li>
+  <li>Snarky annotation commentary column,                            </li>
   <li>Entire source code is a single continuous page.                 </li>
-
 </ul>
 <p>
 Header Format is:
