--- a/dos33.html
+++ b/dos33.html
@@ -5028,13 +5028,13 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                                                                                     ;              $<span class='n'>AC01</span>:<span class='n'>11</span> &rarr; $B5FA
 33BD:0F             025 <a class="d" name="VDIRSC">VDIRSC      </a>DFB 15          ; VOLUME DIRECTORY SECTOR       ; [02] Used by File <a class="file" href="#FLOCNXB">FLOCNXB</a>, Func <a class="x" href="#RVDC">RVDC</a>, Line <span class="todo">??</span>
 33BE:04             026 <a class="d" name="VDOSRN">VDOSRN      </a>DFB 4           ; DOS RELEASE NUMBER            ; [03] *sarcasm* I guess <b>VERSION</b> made too much sense.
-33BF:00             027             DFB 0           ; SPARE                         ; [04] <a class='struct' name='_33BF'>wastes</a> 1 byte /sarcasm "<i>Because <b>someday</b> these</i>
-33C0:00             028             DFB 0           ; SPARE                         ; [05] <a class='struct' name='_33C0'>wastes</a> 1 byte &#x0CA0;_&#x0CA0;      <i><b>might</b> be used ... ?</i>" Uh-huh.
-33C1:FE             029 <a class="d" name="VVOLNO">VVOLNO      </a>DFB $FE         ; VOLUME NUMBER                 ; [06]          Design for <i>today</i>, not *someday*
+33BF:00             027             DFB 0           ; SPARE                         ; [04] <a class='struct' name='_33BF'>wastes</a> 1 byte /sarcasm "<i>Because <b>someday</b> these <b>might</b> be used ... ?</i>"
+33C0:00             028             DFB 0           ; SPARE                         ; [05] <a class='struct' name='_33C0'>wastes</a> 1 byte &#x0CA0;_&#x0CA0;       Uh-huh.
+33C1:FE             029 <a class="d" name="VVOLNO">VVOLNO      </a>DFB $FE         ; VOLUME NUMBER                 ; [06]                         <b>Design for today</b>, not <i>someday</i>
 33C2:00 00 00 00    030             DS 32           ; SPARE                         ; [07] <a class='struct' name='_33C2'>wastes</a> 32 bytes, <b>WTF !</b>
 33C6:00 00 00 00                                                                    ;      Gee, here's an idea:
 33CA:00 00 00 00                                                                    ;      Instead of <i>wasting space</i> in the VTOC
-33CE:00 00 00 00                                                                    ;        1) Pack our data by removing all the <i>unused crap:</i>
+33CE:00 00 00 00                                                                    ;        1) <b>Pack our data</b> by removing all the <i>unused crap:</i>
 33D2:00 00 00 00                                                                    ;           Total 1+1+32+8 = <b>42 bytes!</b>
 33D6:00 00 00 00                                                                    ;        2) Put VTOC data as first XX bytes in the <a class='ts'>T11SF</a> CATALOG
 33DA:00 00 00 00                                                                    ;      
