Fix comment to match actual color

--- a/dos33.html
+++ b/dos33.html
@@ -3,9 +3,8 @@
 <title>Apple DOS 3.3C Source Code (Unified HTML and Annotated Version by Michael Pohoreski)</title>
 <head>
     <style>
-
 a {
-    color: #F0F; /* Should never see purple -- means link wasn't marked up propery */
+    color: #F0F; /* Should never see magenta -- means link wasn't marked up propery */
     /* background-color:#F0F; */
 }
 /*
