Change to var declaration

--- a/dos33.html
+++ b/dos33.html
@@ -12,7 +12,7 @@ a {
 
     f FUNC definition: Foo EQU *
     x FUNC reference:      JSR Foo
-    d VAR  definition: Bar DFB 0 or Bar EQU $00
+    d VAR  declaration Bar DFB 0 or Bar EQU $00
     v VAR  reference       LDA Bar
     e EQU  const       Foo EQU 1
 */
